gitignore, new wdl, and moved to old_wdls

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 cromwell-workflow-logs/
 cromwell-executions/
+shane_chages/
+test_data/large_test
+.Rhistory
 cromwell/
 *.buildinfo
 *.html
@@ -17,3 +20,10 @@ metadata_out.json
 *.bam
 *.gtf
 Notes.md
+shane_chages/*.wdl
+.DS_Store
+*.fa.gz
+sftp.json
+settings.json
+*.pyc
+*.zip
