changes specifying database

--- a/wdls/shifter.conf
+++ b/wdls/shifter.conf
@@ -23,7 +23,7 @@ backend {
         runtime-attributes = """
         String? docker
         String? docker_user = "$EUID" 
-        String? database
+        String? database = "/global/cfs/cdirs/m3408/aim2/database/"
         """
         
         submit = "/bin/bash ${script}"
