add scripts to env

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,20 +7,25 @@ LABEL tags="bioinformatics"
 ENV container docker
 
 RUN apt-get update --allow-releaseinfo-change -y \
-    && apt-get install -y build-essential unzip wget curl gawk locales r-base\
+    && apt-get install -y build-essential unzip wget curl gawk locales\
     && apt-get clean
 
-RUN conda config --add channels conda-forge && \ 
-    conda config --add channels bioconda
-RUN conda install megahit stringtie 
-Run conda install pandas gffutils
+RUN sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && \
+    locale-gen
 
-RUN Rscript -e "install.packages('BiocManager', repos = 'http://cran.us.r-project.org')" \
-    && Rscript -e "BiocManager::install('edgeR')"
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US:en
+ENV LC_ALL en_US.UTF-8
 
-RUN Rscript -e "install.packages('tidyverse', repos = 'http://cran.us.r-project.org')" \
-    Rscript -e "install.packages('optparse', repos = 'http://cran.us.r-project.org')"
-
+RUN conda config --add channels conda-forge \
+    && conda config --add channels bioconda
+RUN conda install -c bioconda stringtie --yes \
+    && conda install -c bioconda megahit --yes \
+    && conda install R --yes \
+    && conda clean -a 
+RUN pip install gffutils pandas
+RUN conda install R-tidyverse R-optparse \
+    && conda install bioconductor-edger
 
 RUN wget https://github.com/microbiomedata/metaT/archive/refs/heads/metat-develop.zip \
     && unzip metat-develop.zip \
