--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,23 @@
 [submodule "readsqc"]
-	path = readsqc
-	url = https://github.com/microbiomedata/metaT_ReadsQC.git
-[submodule "assembly"]
-	path = assembly
-	url = https://github.com/microbiomedata/metaT_Assembly.git
+	path = git_submodules/readsqc
+	url = https://github.com/microbiomedata/metaT_ReadsQC.git 
+
 [submodule "annotation"]
-	path = annotation
-	url = https://github.com/microbiomedata/mg_annotation
+	path = git_submodules/annotation
+	url = https://github.com/microbiomedata/mg_annotation.git 
+
+[submodule "assembly"]
+	path = git_submodules/assembly
+	url = https://github.com/microbiomedata/metaT_Assembly.git 
+
 [submodule "readcount"]
-	path = readcount
-	url = https://github.com/microbiomedata/metaT_ReadCounts
+	path = git_submodules/readcount
+	url = https://github.com/microbiomedata/metaT_ReadCounts.git 
+
+[submodule "ReadbasedAnalysis"]
+	path = git_submodules/ReadbasedAnalysis
+	url = https://github.com/microbiomedata/ReadbasedAnalysis.git 
+
+[submodule "virusPlasmids"]
+	path = git_submodules/virusPlasmids
+	url = https://github.com/microbiomedata/virusPlasmids.git 
