--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -25,6 +25,6 @@ jobs:
         run: zip -r bundle.zip *.wdl
 
       - name: Create Release
-        run: gh release create ${{ env.VERSION }} metaT.wdl to_json.wdl bundle.zip
+        run: gh release create ${{ env.VERSION }} metaT.wdl metat_tasks.wdl bundle.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
